--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1//Commit de prueba</ion-title>
+      <ion-title size="large">Tab 1//CComentario de prueba 2</ion-title>
     </ion-toolbar>
   </ion-header>
 
