QM-5 Terminacion de la interfaz de login

--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,12 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+
+/* COMENTADO PARA TRABAJAR EN MODO CLARO
+@import "@ionic/angular/css/palettes/dark.system.css"; */
+
+/* Componentes para poder usar  tailwind */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
