--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,5 +1,173 @@
 <ion-content [fullscreen]="true">
- 
+ <!-- Contenedor del perfil del cliente -->
+ <div class="flex items-center space-x-4 p-2 sm:p-4 md:p-6">
+    <img src="assets/icon/logo-empresa.png" alt="Foto de perfil" class="w-[3.5rem] h-[3.5rem] sm:w-[4.5rem] sm:h-[4.5rem] md:w-[5.5rem] md:h-[5.5rem] rounded-full">
+    <div>
+      <h4 class="text-md sm:text-lg md:text-xl font-semibold text-gray-900">QuickDineHub</h4>
+    </div>
+  </div>
+  
+  <!-- Contenedor del encabezado -->
+  <div class="px-4 py-2 sm:px-6 md:px-8 text-center">
+    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900">
+      Mis
+      <span class="font-bold" style="color: #ff8633;">pedidos</span>
+    </h1>
+  </div>
+  
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
+    <!-- Card del pedido -->
+    <div class="bg-white rounded-lg shadow-md p-4">
+      <div class="flex justify-between items-center">
+        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
+        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
+      </div>
+  
+      <!-- Contenedor de platillos -->
+      <div class="mt-4 space-y-4">
+        
+        <!-- Primer platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
+            <p class="text-xs sm:text-sm text-gray-700">$30</p>
+          </div>
+        </div>
+        
+        <!-- Segundo platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
+            <p class="text-xs sm:text-sm text-gray-700">$50</p>
+          </div>
+        </div>
+        
+      </div>
+  
+      <!-- Total del pedido -->
+      <div class="flex justify-between items-center mt-4">
+        <p class="text-sm sm:text-md font-bold">Total: $80</p>
+      </div>
+    </div>
+    
+    <!-- Card del pedido -->
+    <div class="bg-white rounded-lg shadow-md p-4">
+      <div class="flex justify-between items-center">
+        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
+        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
+      </div>
+  
+      <!-- Contenedor de platillos -->
+      <div class="mt-4 space-y-4">
+        
+        <!-- Primer platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
+            <p class="text-xs sm:text-sm text-gray-700">$30</p>
+          </div>
+        </div>
+        
+        <!-- Segundo platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
+            <p class="text-xs sm:text-sm text-gray-700">$50</p>
+          </div>
+        </div>
+        
+      </div>
+  
+      <!-- Total del pedido -->
+      <div class="flex justify-between items-center mt-4">
+        <p class="text-sm sm:text-md font-bold">Total: $80</p>
+      </div>
+    </div>
+  
+    <!-- Card del pedido -->
+    <div class="bg-white rounded-lg shadow-md p-4">
+      <div class="flex justify-between items-center">
+        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
+        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
+      </div>
+  
+      <!-- Contenedor de platillos -->
+      <div class="mt-4 space-y-4">
+        
+        <!-- Primer platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
+            <p class="text-xs sm:text-sm text-gray-700">$30</p>
+          </div>
+        </div>
+        
+        <!-- Segundo platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
+            <p class="text-xs sm:text-sm text-gray-700">$50</p>
+          </div>
+        </div>
+        
+      </div>
+  
+      <!-- Total del pedido -->
+      <div class="flex justify-between items-center mt-4">
+        <p class="text-sm sm:text-md font-bold">Total: $80</p>
+      </div>
+    </div>
+  
+    <!-- Card del pedido -->
+    <div class="bg-white rounded-lg shadow-md p-4">
+      <div class="flex justify-between items-center">
+        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
+        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
+      </div>
+  
+      <!-- Contenedor de platillos -->
+      <div class="mt-4 space-y-4">
+        
+        <!-- Primer platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
+            <p class="text-xs sm:text-sm text-gray-700">$30</p>
+          </div>
+        </div>
+        
+        <!-- Segundo platillo -->
+        <div class="flex space-x-4 items-center">
+          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+          <div>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
+            <p class="text-xs sm:text-sm text-gray-700">$50</p>
+          </div>
+        </div>
+        
+      </div>
+  
+      <!-- Total del pedido -->
+      <div class="flex justify-between items-center mt-4">
+        <p class="text-sm sm:text-md font-bold">Total: $80</p>
+      </div>
+    </div>
+  </div>
 
   
 </ion-content>
