QM-10 Conexion del back al front de Login2

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,7 @@
       
       <form [formGroup]="loginForm" (ngSubmit)="onLogin()" class="space-y-5">
         
-        <!-- Campo de Correo Electrónico -->
+        <!-- Campo de Correo Electrónico1 -->
         <div>
           <label for="email" class="block text-sm md:text-base font-medium text-gray-700">Correo Electrónico</label>
           <input
