QM-12 Creacion del modal de pasarela de pagos

--- a/src/app/components/product-quickview/product-quickview.component.html
+++ b/src/app/components/product-quickview/product-quickview.component.html
@@ -40,9 +40,9 @@
               <!-- Add to cart button -->
               <section aria-labelledby="options-heading" class="mt-10">
                 <h3 id="options-heading" class="sr-only">Product options</h3>
-                <form>
+                <!-- <form>
                   <button type="submit" class="mt-6 flex w-full items-center justify-center rounded-md border border-transparent bg-[#ff8633] px-8 py-3 text-base font-medium text-white hover:bg-[#ff6133] focus:outline-none focus:ring-2 focus:ring-[#ff8633] focus:ring-offset-2">Agregar al carrito</button>
-                </form>
+                </form> -->
               </section>
             </div>
           </div>
