--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -91,7 +91,7 @@
               
               <!-- Contenedor de botones en la parte inferior -->
               <div class="mt-auto flex space-x-2 pt-4">
-                <button class="bg-[#ff8633] text-white px-2 py-1 rounded hover:bg-[#ff6133]">
+                <button (click)="agregarAlCarrito(producto)" class="bg-[#ff8633] text-white px-2 py-1 rounded hover:bg-[#ff6133]" >
                   <i class="fas fa-shopping-cart"></i>
                 </button>
                 <button (click)="quickview.openModal(producto._id)" class="bg-[#ff8633] text-white px-2 py-1 rounded hover:bg-[#ff6133]">
@@ -103,7 +103,7 @@
             
             <!-- Product Quickviews "detalles del producto" -->
             <app-product-quickview #quickview></app-product-quickview>
-            <!-- More products... -->
+           
           </div>
         </div>
       </div>
