--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -17,32 +17,22 @@
   
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
     <!-- Card del pedido -->
-    <div class="bg-white rounded-lg shadow-md p-4">
+    <div *ngFor="let orden of ordenes1" class="bg-white rounded-lg shadow-md p-4">
       <div class="flex justify-between items-center">
-        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
-        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
+        <h3 class="text-sm md:text-md font-semibold text-gray-900"> {{ orden.fechaHoraEntrega | date: 'dd/MM/yy' }}</h3>
+        <span class="text-sm md:text-md font-semibold text-[#ff8633]">{{ obtenerEstado(orden.estadoOrden) }}</span>
       </div>
   
       <!-- Contenedor de platillos -->
       <div class="mt-4 space-y-4">
         
         <!-- Primer platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
+        <div *ngFor="let detalle of ordenes[orden._id]" class="flex space-x-4 items-center">
+          <img [src]="getImageUrl(detalle.producto?.imagen[0])" alt="{{ detalle.producto?.nombre }}" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
           <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
-            <p class="text-xs sm:text-sm text-gray-700">$30</p>
-          </div>
-        </div>
-        
-        <!-- Segundo platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
-            <p class="text-xs sm:text-sm text-gray-700">$50</p>
+            <p class="text-sm sm:text-md font-semibold text-gray-800">{{ detalle.producto?.nombre }}</p>
+            <p class="text-xs sm:text-sm text-gray-700">Platillos: {{ detalle.cantidadProducto }}</p>
+            <p class="text-xs sm:text-sm text-gray-700">Precio unitario: ${{ detalle.producto?.precio.$numberDecimal }}</p>
           </div>
         </div>
         
@@ -50,123 +40,11 @@
   
       <!-- Total del pedido -->
       <div class="flex justify-between items-center mt-4">
-        <p class="text-sm sm:text-md font-bold">Total: $80</p>
+        <p class="text-sm sm:text-md font-bold">Total: ${{ orden.precioTotal.$numberDecimal }}</p>
       </div>
     </div>
     
-    <!-- Card del pedido -->
-    <div class="bg-white rounded-lg shadow-md p-4">
-      <div class="flex justify-between items-center">
-        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
-        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
-      </div>
-  
-      <!-- Contenedor de platillos -->
-      <div class="mt-4 space-y-4">
-        
-        <!-- Primer platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
-            <p class="text-xs sm:text-sm text-gray-700">$30</p>
-          </div>
-        </div>
-        
-        <!-- Segundo platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
-            <p class="text-xs sm:text-sm text-gray-700">$50</p>
-          </div>
-        </div>
-        
-      </div>
-  
-      <!-- Total del pedido -->
-      <div class="flex justify-between items-center mt-4">
-        <p class="text-sm sm:text-md font-bold">Total: $80</p>
-      </div>
-    </div>
-  
-    <!-- Card del pedido -->
-    <div class="bg-white rounded-lg shadow-md p-4">
-      <div class="flex justify-between items-center">
-        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
-        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
-      </div>
-  
-      <!-- Contenedor de platillos -->
-      <div class="mt-4 space-y-4">
-        
-        <!-- Primer platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
-            <p class="text-xs sm:text-sm text-gray-700">$30</p>
-          </div>
-        </div>
-        
-        <!-- Segundo platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
-            <p class="text-xs sm:text-sm text-gray-700">$50</p>
-          </div>
-        </div>
-        
-      </div>
-  
-      <!-- Total del pedido -->
-      <div class="flex justify-between items-center mt-4">
-        <p class="text-sm sm:text-md font-bold">Total: $80</p>
-      </div>
-    </div>
-  
-    <!-- Card del pedido -->
-    <div class="bg-white rounded-lg shadow-md p-4">
-      <div class="flex justify-between items-center">
-        <h3 class="text-sm md:text-md font-semibold text-gray-900">23/09/24</h3>
-        <span class="text-sm md:text-md font-semibold text-[#ff8633]">En cocina</span>
-      </div>
-  
-      <!-- Contenedor de platillos -->
-      <div class="mt-4 space-y-4">
-        
-        <!-- Primer platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/tostadas.jpg" alt="Tostadas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Tostadas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 2</p>
-            <p class="text-xs sm:text-sm text-gray-700">$30</p>
-          </div>
-        </div>
-        
-        <!-- Segundo platillo -->
-        <div class="flex space-x-4 items-center">
-          <img src="assets/icon/enchiladas.jpg" alt="Enchiladas poblanas" class="w-12 h-12 sm:w-16 sm:h-16 lg:w-20 lg:h-20 rounded-lg object-cover">
-          <div>
-            <p class="text-sm sm:text-md font-semibold text-gray-800">Enchiladas poblanas</p>
-            <p class="text-xs sm:text-sm text-gray-700">Platillos: 1</p>
-            <p class="text-xs sm:text-sm text-gray-700">$50</p>
-          </div>
-        </div>
-        
-      </div>
-  
-      <!-- Total del pedido -->
-      <div class="flex justify-between items-center mt-4">
-        <p class="text-sm sm:text-md font-bold">Total: $80</p>
-      </div>
-    </div>
+    
   </div>
 
   
