QM-12 Generar funciones stripe

--- a/src/app/components/pasarela-pagos/pasarela-pagos.component.html
+++ b/src/app/components/pasarela-pagos/pasarela-pagos.component.html
@@ -46,6 +46,9 @@
           <button class="w-full bg-[#ff8633] text-white font-bold py-1 sm:py-2 md:py-3 rounded hover:bg-[#ff6133]">
             Pagar con Google Play
           </button>
+          <ion-button expand="block" class="ion-margin-top" (click)="paymentSheet()">Pagar con tarjeta de credito</ion-button>
+           <!-- <ion-button expand="block" class="ion-margin-top" (click)="paymentFlow()">Pagar con tarjeta de credito/debito</ion-button> -->
+          <ion-button expand="block" class="ion-margin-top" (click)="googlePay()">Pagar con Google Play</ion-button>
         </div>
       </div>
     </div>
