--- a/src/app/components/pasarela-pagos/pasarela-pagos.component.html
+++ b/src/app/components/pasarela-pagos/pasarela-pagos.component.html
@@ -31,27 +31,17 @@
         <!-- Total -->
         <p class="text-gray-500 mb-4 text-sm sm:text-base">Paga el total del carrito</p>
         <p class="text-lg font-semibold text-gray-900 mb-6">Total: ${{ totalCompra }}</p>
-        Stripe
+        <!-- Stripe -->
         <!-- Botones de pago -->
         <div class="space-y-2">
-          <button class="w-full bg-[#ff8633] text-white font-bold py-1 sm:py-2 md:py-3 rounded hover:bg-[#ff6133]">
-            Pagar con tarjeta de crédito
-          </button>
-          <button class="w-full bg-[#ff8633] text-white font-bold py-1 sm:py-2 md:py-3 rounded hover:bg-[#ff6133]">
-            Pagar con tarjeta de crédito/débito
-          </button>
-          <button class="w-full bg-[#ff8633] text-white font-bold py-1 sm:py-2 md:py-3 rounded hover:bg-[#ff6133]">
-            Pagar con Apple Pay
-          </button>
-          <button class="w-full bg-[#ff8633] text-white font-bold py-1 sm:py-2 md:py-3 rounded hover:bg-[#ff6133]">
-            Pagar con Google Play
-          </button>
-          Stripe
-          <ion-button expand="block" class="ion-margin-top" (click)="paymentSheet()">Pagar con tarjeta de credito</ion-button>
-          <ion-button expand="block" class="ion-margin-top" (click)="paymentFlow()">Pagar con tarjeta flow</ion-button>
-
-          <ion-button expand="block" class="ion-margin-top" (click)="googlePay()">Pagar con Google Play</ion-button>
-
+       
+          <button expand="block" [ngClass]="{'bg-[#ff8633] hover:bg-[#ff6133]': !botonesDeshabilitados, 'bg-[#ff8633]/50': botonesDeshabilitados}" 
+          class="w-full text-white font-bold py-1 sm:py-2 md:py-3 mt-3 rounded" (click)="paymentSheet()" [disabled]="botonesDeshabilitados">Pagar con tarjeta de credito</button>
+          <!-- <ion-button expand="block" class="ion-margin-top" (click)="paymentFlow()" [disabled]="botonesDeshabilitados">Pagar con tarjeta flow</ion-button> -->
+          <button expand="block" [ngClass]="{'bg-[#ff8633] hover:bg-[#ff6133]': !botonesDeshabilitados, 'bg-[#ff8633]/50': botonesDeshabilitados}" 
+          class="w-full text-white font-bold py-1 sm:py-2 md:py-3 mt-3 rounded" (click)="googlePay()" [disabled]="botonesDeshabilitados">Pagar con Google Pay</button>
+          <!-- <ion-button expand="block" class="ion-margin-top" (click)="Inicio()" [disabled]="botonesDeshabilitados" >Crear Orden</ion-button> -->
+          
 
         </div>
       </div>
