QM-12 Terminacion de Formulario de feedback

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -65,7 +65,8 @@
   </button>
   
     <!-- Product Quickviews "detalles del producto" -->
-    <app-pasarela-pagos #quickview [totalCompra]="totalCompra" [carritoConsulta]="carritoConsulta" (carritoVaciado)="cargarProductosCarrito()" (carritoVaciado)="obtenerDatoComensal()"></app-pasarela-pagos>
+    <app-pasarela-pagos #quickview [totalCompra]="totalCompra" [carritoConsulta]="carritoConsulta" (carritoVaciado)="cargarProductosCarrito()" (carritoVaciado)="obtenerDatoComensal()" (abrirFeedback)="mostrarModalFeedback()"></app-pasarela-pagos>
+    <app-feedback-formulario #feedback></app-feedback-formulario>
   </div>
   
 
