--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -67,6 +67,18 @@
           >
               Carnes
           </button>
+          <!-- (click)="feedback.openModal()" -->
+          <!-- <button
+              
+              class="px-4 py-2 font-semibold rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 transition duration-300 ease-in-out"
+              [ngClass]="{
+                  'bg-[#ff8633] text-white hover:bg-[#ff6133] focus:ring-[#ff8633]': selectedFilter === 'carnes',
+                  'bg-gray-200 text-gray-700 hover:bg-gray-300 focus:ring-gray-300': selectedFilter !== 'carnes'
+              }"
+          >
+              Modal
+          </button> -->
+          <!-- <app-feedback-formulario #feedback></app-feedback-formulario> -->
       </div>
   </div>
 
