QW-12 Correccion de formulario final

--- a/src/app/components/pasarela-pagos/pasarela-pagos.component.html
+++ b/src/app/components/pasarela-pagos/pasarela-pagos.component.html
@@ -40,7 +40,7 @@
           <!-- <ion-button expand="block" class="ion-margin-top" (click)="paymentFlow()" [disabled]="botonesDeshabilitados">Pagar con tarjeta flow</ion-button> -->
           <button expand="block" [ngClass]="{'bg-[#ff8633] hover:bg-[#ff6133]': !botonesDeshabilitados, 'bg-[#ff8633]/50': botonesDeshabilitados}" 
           class="w-full text-white font-bold py-1 sm:py-2 md:py-3 mt-3 rounded" (click)="googlePay()" [disabled]="botonesDeshabilitados">Pagar con Google Pay</button>
-          <ion-button expand="block" class="ion-margin-top" (click)="Inicio()" [disabled]="botonesDeshabilitados" >Crear Orden</ion-button>
+          <!-- <ion-button expand="block" class="ion-margin-top" (click)="Inicio()" [disabled]="botonesDeshabilitados" >Crear Orden</ion-button> -->
           
           
         </div>
